--- a/TextBoxComponent.razor
+++ b/TextBoxComponent.razor
@@ -34,7 +34,8 @@
     background-color: @TextBoxBackColor;
     height: @HeightStyle;
     line-height: 2vh;
-    font-size: @FontSizeStyle;
+    font-size: @TextBoxFontSizeStyle;
+    font-family: @TextBoxFontName;
     width: @TextBoxWidthStyle;
     overflow: hidden;
     z-index: @ZIndex;
