--- a/CalendarComponent.razor
+++ b/CalendarComponent.razor
@@ -262,6 +262,7 @@
                 ClassName="displayinline" Column1Width="@Column1Width" FontSize="@TextBoxFontSize"
                 Column2Width="@Column2Width" TextBoxWidth="@TextBoxWidth" 
                 LabelFontSize="@LabelFontSize" LabelFontName="@LabelFontName"
+                TextBoxFontSize="@TextBoxFontSize" TextBoxFontName="@TextBoxFontName"
                 Width="@Width" Height="@TextBoxHeight" LabelClassName="@LabelClassName" 
                 ZIndex="@ZIndex" Left="@TextBoxLeft">
             </TextBoxComponent>
