Fixed The TextBoxTextColor property.

--- a/TextBoxComponent.razor
+++ b/TextBoxComponent.razor
@@ -39,6 +39,7 @@
     width: @TextBoxWidthStyle;
     overflow: hidden;
     z-index: @ZIndex;
+    color: @TextBoxTextColor;
     border-width: @BorderWidthStyle;
     border-color: @BorderColor;
 </Styled>
