I fixed the Label Font, TextAlign and Color.

--- a/Label.razor
+++ b/Label.razor
@@ -17,6 +17,9 @@
     left: @LeftStyle;
     top: @TopStyle;
     height: @HeightStyle;
+    text-align: @TextAlign;
+    color: @LabelColor;
+    font-size: @LabelFontSizeStyle;    
     background-color: @BackgroundColor;
     z-index: @ZIndex;
 </Styled>
