I added a BackgroundColor property to the InformationBox and fixed ThemeRed for the InfoBox

--- a/InformationBox.razor
+++ b/InformationBox.razor
@@ -4,6 +4,7 @@
 @using DataJuggler.Blazor.Components.Enumerations
 
 <Styled @bind-Classname=@InfoBoxStyle>
+    background-color: @BackgroundColor.Name;
     display: @Display;
     position: @Position;
     left: @LeftStyle;
