I added a HeadFontName property.

--- a/InformationBox.razor
+++ b/InformationBox.razor
@@ -64,6 +64,7 @@
     top: @HeaderTextVerticalOffsetStyle;
     font-size: @HeaderFontSizeStyle;
     font-weight: @HeaderFontWeight;
+    font-family: @HeaderFontName;
 </Styled>
 
 <div class="@InfoBoxStyle">
