--- a/InformationBox.razor
+++ b/InformationBox.razor
@@ -50,7 +50,8 @@
 </Styled>
 <Styled @bind-Classname=@ListItemStyle>
     display: block;
-    font-size: @FontSizeStyle;    
+    font-size: @FontSizeStyle;
+    height: @ListItemHeightStyle;
 </Styled>
 <Styled @bind-Classname=@ImageStyle>
     display: inline-block;
