I added FontName and changed default ListItemHeight to 16

--- a/InformationBox.razor
+++ b/InformationBox.razor
@@ -51,6 +51,7 @@
 <Styled @bind-Classname=@ListItemStyle>
     display: block;
     font-size: @FontSizeStyle;
+    font-name: @FontName;
     height: @ListItemHeightStyle;
 </Styled>
 <Styled @bind-Classname=@ImageStyle>
