I think I fixed SetFocusOnFirstRender

--- a/TextBoxComponent.razor
+++ b/TextBoxComponent.razor
@@ -97,18 +97,38 @@
                     @if (Enabled)
                     {
                         if (HandleChangeOption == HandleChangeEnum.OnKeyDown)
-                        {
-                            <input class="@TextBoxStyle @TextBoxClassName" autocomplete="@AutoCompleteStyle" 
-                                type=@InputType @bind="@Text" pattern="@Pattern" @onblur="HandleBlur"
-                                @bind:event="oninput" onfocus="this.select()" tabindex="@TabIndex"
-                            onClick="this.select();" @onkeydown="Enter" @ref="InnerControl" />
+                        {  
+                            @if (setFocusOnFirstRender)
+                            {
+                                <input class="@TextBoxStyle @TextBoxClassName" autocomplete="@AutoCompleteStyle" 
+                                    type=@InputType @bind="@Text" pattern="@Pattern" @onblur="HandleBlur"
+                                    @bind:event="oninput" onfocus="this.select()" tabindex="@TabIndex" @onload="SetFocus"
+                                    onClick="this.select();" @onkeydown="Enter" @ref="InnerControl" />
+                            }
+                            else
+                            {
+                                <input class="@TextBoxStyle @TextBoxClassName" autocomplete="@AutoCompleteStyle"
+                                       type=@InputType @bind="@Text" pattern="@Pattern" @onblur="HandleBlur"
+                                       @bind:event="oninput" onfocus="this.select()" tabindex="@TabIndex"
+                                       onClick="this.select();" @onkeydown="Enter" @ref="InnerControl" />
+                            }
                         }
                         else
                         {
-                            <input class="@TextBoxStyle @TextBoxClassName" autocomplete="@AutoCompleteStyle"
-                                   type=@InputType @bind="@Text" pattern="@Pattern" @onblur="HandleBlur"
-                                   onfocus="this.select();" tabindex="@TabIndex"
-                                   onClick="this.select();" @ref="InnerControl" />
+                            @if (setFocusOnFirstRender)
+                            {
+                                <input class="@TextBoxStyle @TextBoxClassName" autocomplete="@AutoCompleteStyle"
+                                       type=@InputType @bind="@Text" pattern="@Pattern" @onblur="HandleBlur"
+                                       onfocus="this.select();" tabindex="@TabIndex" @onload="SetFocus"
+                                       onClick="this.select();" @ref="InnerControl" />
+                            }
+                            else
+                            {
+                                <input class="@TextBoxStyle @TextBoxClassName" autocomplete="@AutoCompleteStyle"
+                                       type=@InputType @bind="@Text" pattern="@Pattern" @onblur="HandleBlur"
+                                       onfocus="this.select();" tabindex="@TabIndex"
+                                       onClick="this.select();" @ref="InnerControl" />
+                            }
                         }
                     }
                     else
