Checking in version 9.2.11.

--- a/Label.razor
+++ b/Label.razor
@@ -22,6 +22,9 @@
     font-size: @LabelFontSizeStyle;    
     background-color: @BackgroundColor;
     z-index: @ZIndex;
+    visibility: @VisibilityStyle;
+    opacity: @OpacityStyle;
+    transition: @TransitionStyle;
 </Styled>
 <Styled @bind-Classname=@BottomMarginStyle>
     width: @WidthStyle;
