I finally fixed the label to where it fades properly.

--- a/Label.razor
+++ b/Label.razor
@@ -13,6 +13,7 @@
     height: 100%;
 </Styled>
 <Styled @bind-Classname=@LabelControlStyle>
+    display: @DisplayStyle;
     width: @WidthStyle;
     position: @Position;
     left: @LeftStyle;
@@ -29,49 +30,44 @@
     height: @MarginBottomStyle;
 </Styled>
 
-@if (Visible)
-{
-    <div id="@ClientId" class="row">
-        <div class="@LabelControlStyle">
-            @if (ShowCaption)
-            {
-                <div class="@LabelStyle">
-                    <div class="@LabelClassName">@Caption</div>
-                </div>
-            }
-            @if (EnableClick)
-            {
-                <div class="@ClassName cursorpointer" @onclick="() => OnClick()">
-                    @Text
-                </div>
-            }
-            else if (EnableDoubleClick)
-            {
-                <div class="@ClassName cursorpointer" @ondblclick="() => OnDoubleClick()">                    
-                    @Text
-                </div>
-            }
-            else if (EditMode)
-            {
-                <div>
-                    <input class="@TextBoxClassName" autocomplete="@AutoCompleteStyle" type="text" @bind="@Text" 
-                        @bind:event="oninput" onfocus="this.select()" 
-                            onClick="this.select();" @onkeydown="Enter" @ref="InnerControl" />                    
-                </div>
-            }
-            else
-            {
-                <div class="@ClassName">
-                    @Text
-                </div>
-            }
-            @if (ShowImage)
-            {  
-                <div class="@ImageClassName">
-                    <div class="@ImageStyle"></div>
-                </div>
-            }
+<div id="@ClientId" class="@LabelControlStyle">
+    @if (ShowCaption)
+    {
+        <div class="@LabelStyle">
+            <div class="@LabelClassName">@Caption</div>
         </div>
-    </div>
-    <div class="@BottomMarginStyle"></div>
-}
+    }
+    @if (EnableClick)
+    {
+        <div class="@ClassName cursorpointer" @onclick="() => OnClick()">
+            @Text
+        </div>
+    }
+    else if (EnableDoubleClick)
+    {
+        <div class="@ClassName cursorpointer" @ondblclick="() => OnDoubleClick()">                    
+            @Text
+        </div>
+    }
+    else if (EditMode)
+    {
+        <div>
+            <input class="@TextBoxClassName" autocomplete="@AutoCompleteStyle" type="text" @bind="@Text" 
+                @bind:event="oninput" onfocus="this.select()" 
+                    onClick="this.select();" @onkeydown="Enter" @ref="InnerControl" />                    
+        </div>
+    }
+    else
+    {
+        <div class="@ClassName">
+            @Text
+        </div>
+    }
+    @if (ShowImage)
+    {  
+        <div class="@ImageClassName">
+            <div class="@ImageStyle"></div>
+        </div>
+    }
+</div>
+<div class="@BottomMarginStyle"></div>
