I fixed the ComboBox.TextBoxHeight property wasn't working.

--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -69,7 +69,7 @@
                 <td width="@TextBoxWidth">
                     <TextBoxComponent Name="DisplayTextBox" Caption="@LabelText" Parent="this" 
                         ClassName="displayinline" Column1Width="@Column1Width" 
-                        Column2Width="@Column2Width" TextBoxWidth="@TextBoxWidth"
+                        Column2Width="@Column2Width" TextBoxWidth="@TextBoxWidth" Height="@TextBoxHeight"
                         LabelFontName="@LabelFontName" LabelFontSize ="@LabelFontSize"
                         LabelColor="@LabelColor.Name" OnTextChangedCallback="OnTextChanged"
                         TextBoxFontSize="@TextBoxFontSize" TextBoxFontName="@TextBoxFontName"
