Checking in version 9.4.0, which seems to be a pretty stable release with updates to the Calendar, ComboBox and Toggle components.

--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -63,7 +63,7 @@
 
 @if (Visible)
 {
-    <div class="@ContainerStyle @ClassName">
+    <div class="@ContainerStyle @ClassName textdonotwrap">
         <table>
             <tr class="textdonotwrap">
                 <td width="@TextBoxWidth">
