--- a/TextBoxComponent.razor
+++ b/TextBoxComponent.razor
@@ -68,7 +68,7 @@
 
 @if (Visible)
 {  
-    <div class="@TextBoxControlStyle">
+    <div class="@TextBoxControlStyle textdonotwrap">
         @if (ShowCaption)
         {
             <div class="@Column1Style">
