--- a/CalendarComponent.razor
+++ b/CalendarComponent.razor
@@ -261,6 +261,7 @@
             <TextBoxComponent Name="DisplayTextBox" Caption="@Caption" Parent="this" 
                 ClassName="displayinline" Column1Width="@Column1Width" FontSize="@TextBoxFontSize"
                 Column2Width="@Column2Width" TextBoxWidth="@TextBoxWidth" 
+                LabelColor="@LabelColor.Name"
                 LabelFontSize="@LabelFontSize" LabelFontName="@LabelFontName"
                 TextBoxFontSize="@TextBoxFontSize" TextBoxFontName="@TextBoxFontName"
                 Width="@Width" Height="@TextBoxHeight" LabelClassName="@LabelClassName" 
