--- a/TimeComponent.razor
+++ b/TimeComponent.razor
@@ -38,7 +38,7 @@
     <tr>
         <td width="@LabelWidth">
             <Label Name="LabelComponent" Parent="this" Caption="@Caption" Left="@LabelLeft" 
-                Top=@LabelTop Width="80"></Label>
+                Top=@LabelTop Width="80" LabelColor="@LabelColor.Name"></Label>
         </td>        
         <td width="@HoursTextBoxWidth">
             <TextBoxComponent Name="HoursTextBox" Column1Width="0" ShowCaption="false"
