--- a/TimeComponent.razor
+++ b/TimeComponent.razor
@@ -38,6 +38,7 @@
     <tr>
         <td width="@LabelWidth">
             <Label Name="LabelComponent" Parent="this" Caption="@Caption" Left="@LabelLeft" 
+                LabelFontSize="@LabelFontSize" LabelF
                 Top=@LabelTop Width="80" LabelColor="@LabelColor.Name"></Label>
         </td>        
         <td width="@HoursTextBoxWidth">
