Checking in version 9.4.7, which fixes the TimeComponent LabelColor and FontSize for the AMPMLabel.

--- a/CalendarComponent.razor
+++ b/CalendarComponent.razor
@@ -355,7 +355,7 @@
                             }
                             else
                             {
-                                <Label FontSize=11 LabelColor="Black" ClassName="textaligncenter colorblack width80 textdonotwrap fontbold"
+                                <Label FontSize=11 TextColor="Black" ClassName="textaligncenter colorblack width80 textdonotwrap fontbold"
                                        Width="64" Height="12" Text="@DateTitle" Position="relative" Top="2" Left="-8"></Label>
                             }
                         </td>
