I removed LabelFontSizeUnit from the TextBoxComponent.

--- a/TimeComponent.razor
+++ b/TimeComponent.razor
@@ -64,7 +64,7 @@
                 Left="@MinutesTextBoxLeft" Column2Width="@MinutesTextBoxWidth" FontSize="@FontSize"
                 Width="@MinutesTextBoxWidth" TextBoxClassName="@MinutesTextBoxStyle"
                 TextBoxWidth="@MinutesTextBoxWidth" Display="inline-block" Caption=""
-                TextBoxFontSize="@FontSize" FontName="@FontName"
+                TextBoxFontSize="@FontSize" TextBoxFontName="@FontName"
                 OnTextChangedCallback="ValidateMinutes" HandleChangeOption="HandleChangeEnum.OnChange"
                 ShowCaption="false" ZIndex="40" TabIndex="2" SendAllTextToParent="true">
             </TextBoxComponent>
