--- a/Label.razor
+++ b/Label.razor
@@ -21,7 +21,8 @@
     height: @HeightStyle;
     text-align: @TextAlign;
     color: @TextColor;
-    font-size: @FontSizeStyle;    
+    font-size: @FontSizeStyle;
+    font-family: @FontName;
     background-color: @BackgroundColor;
     z-index: @ZIndex;    
 </Styled>
