I set the FontName property of the Label to LabelFontName for the TimeComponent's Label

--- a/InformationBox.razor
+++ b/InformationBox.razor
@@ -53,6 +53,7 @@
     font-size: @FontSizeStyle;
     font-name: @FontName;
     height: @ListItemHeightStyle;
+    min-height: @ListItemHeightStyle;
 </Styled>
 <Styled @bind-Classname=@ImageStyle>
     display: inline-block;
