--- a/TimeComponent.razor
+++ b/TimeComponent.razor
@@ -38,7 +38,7 @@
     <tr>
         <td width="@LabelWidth">
             <Label Name="LabelComponent" Parent="this" Caption="@Caption" Left="@LabelLeft" 
-                FontSize="@LabelFontSize"
+                FontSize="@LabelFontSize" FontName="@LabelFontName"
                 Top=@LabelTop Width="80" TextColor="@LabelColor.Name"></Label>
         </td>        
         <td width="@HoursTextBoxWidth">
