I added a AMPMLabelLeft property to the TimeCompnent

--- a/TimeComponent.razor
+++ b/TimeComponent.razor
@@ -73,7 +73,7 @@
         @if (ShowAMPMLabel)
         {
             <td width="20">
-                <Label Name="LabelAMPMComponent" Parent="this" Left="0" Caption="" 
+                <Label Name="LabelAMPMComponent" Parent="this" Left="@AMPMLabelLeft" Caption="" 
                     FontSize="@LabelFontSize" TextColor="@LabelColor.Name" FontName="@FontName"
                     ClassName="textalignright" EnableDoubleClick="true" NotifyParentOnDoubleClick="true"
                     Top=@LabelTop Width="40" Text="AM"></Label>
