--- a/CalendarComponent.razor
+++ b/CalendarComponent.razor
@@ -264,7 +264,7 @@
             <TextBoxComponent Name="DisplayTextBox" Caption="@Caption" Parent="this" 
                 ClassName="displayinline" Column1Width="@Column1Width" FontSize="@TextBoxFontSize"
                 Column2Width="@Column2Width" TextBoxWidth="@TextBoxWidth" 
-                LabelColor="@LabelColor.Name"
+                LabelColor="@LabelColor.Name" LabelLeft="@LabelLeft"
                 LabelFontSize="@LabelFontSize" LabelFontName="@LabelFontName"
                 TextBoxFontSize="@TextBoxFontSize" TextBoxFontName="@TextBoxFontName"
                 Width="@Width" Height="@TextBoxHeight" LabelClassName="@LabelClassName" 
